--- a/css/style.css
+++ b/css/style.css
@@ -449,6 +449,11 @@ body {
   border: 2px solid #3c3c3c;
   padding: 72px 10% 0 10%;
 }
+@media screen and (max-width: 768px) {
+  .article {
+    width: 93%;
+  }
+}
 .article__title {
   font-family: "Lato bold", sans-serif;
   font-size: 34px;
@@ -539,17 +544,21 @@ body {
   width: 100%;
   height: 480px;
 }
+@media screen and (max-width: 768px) {
+  .gallery {
+    height: 750px;
+  }
+}
 .gallery__row {
   height: 50%;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
-.gallery__block {
-  height: 98%;
-  display: flex;
-  align-items: flex-end;
-  padding: 0 0 2% 2%;
-  transition: opacity 0.4s;
+@media screen and (max-width: 768px) {
+  .gallery__row {
+    flex-direction: column;
+  }
 }
 .gallery__block:hover {
   opacity: 0.6;
@@ -587,6 +596,25 @@ body {
   background-size: cover;
   flex-basis: 28%;
 }
+.gallery__block {
+  height: 98%;
+  display: flex;
+  align-items: flex-end;
+  padding: 0 0 2% 2%;
+  transition: opacity 0.4s;
+}
+@media screen and (max-width: 992px) {
+  .gallery__block {
+    flex-basis: 33%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .gallery__block {
+    flex-basis: 29%;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+}
 .gallery__title {
   font-family: "Lato bold", sans-serif;
   font-size: 34px;
@@ -622,12 +650,11 @@ body {
 
 .footer {
   width: 100%;
-  height: 160px;
+  padding: 3% 0;
   display: flex;
   align-items: center;
 }
 .footer__content {
-  width: 45%;
   margin: 0 auto;
   font-family: "Lato regular", sans-serif;
   font-size: 14px;
