--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,6 +67,9 @@ body {
   position: relative;
   border: 2px solid $black;
   padding: 72px 10% 0 10%;
+  @media screen and (max-width: 768px) {
+    width: 93%;
+  }
   &__title {
     @include Title($title, $black);
     width: 50%;
@@ -133,18 +136,19 @@ body {
 .gallery {
   width: 100%;
   height: 480px;
+  @media screen and (max-width: 768px) {
+    height: 750px;
+  }
   &__row {
     height: 50%;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+    }
   }
-  &__block {
-    height: 98%;
-    display: flex;
-    align-items: flex-end;
-    padding: 0 0 2% 2%;
-    transition: opacity 0.4s;
-  }
+
   &__block:hover {
     opacity: 0.6;
   }
@@ -181,6 +185,21 @@ body {
     background-size: cover;
     flex-basis: 28%;
   }
+  &__block {
+    height: 98%;
+    display: flex;
+    align-items: flex-end;
+    padding: 0 0 2% 2%;
+    transition: opacity 0.4s;
+    @media screen and (max-width: 992px) {
+      flex-basis: 33%;
+    }
+    @media screen and (max-width: 768px) {
+      flex-basis: 29%;
+      width: 100%;
+      margin-bottom: 10px;
+    }
+  }
   &__title {
     @include Title($title, $white);
     transition: transform 0.4s;
@@ -202,11 +221,10 @@ body {
 }
 .footer {
   width: 100%;
-  height: 160px;
+  padding: 3% 0;
   display: flex;
   align-items: center;
   &__content {
-    width: 45%;
     margin: 0 auto;
     font-family: $subtitle-font;
     font-size: 14px;
