--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -16,3 +16,13 @@ $title: 34px;
 $contact-title: 30px;
 $skills-title: 20px;
 $btn-fz: 16px;
+
+//screen sizes
+
+$sizes: (
+  "xs": 389px,
+  "sm": 576px,
+  "md": 768px,
+  "lg": 992px,
+  "xl": 1200px,
+);
