--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -29,3 +29,12 @@
   outline: none;
   border: none;
 }
+@mixin media($minmax, $media) {
+  @each $size, $resolution in $sizes {
+    @if $media == $size {
+      @media only screen and (#{$minmax}-width: $resolution) {
+        @content;
+      }
+    }
+  }
+}
