--- a/css/style.css
+++ b/css/style.css
@@ -579,6 +579,7 @@ body {
 @media only screen and (max-width: 768px) {
   .gallery__row {
     flex-direction: column;
+    margin-bottom: 10px;
   }
 }
 .gallery__block:hover {
