--- a/scss/style.scss
+++ b/scss/style.scss
@@ -158,6 +158,7 @@ body {
     flex-wrap: wrap;
     @include media("max", "md") {
       flex-direction: column;
+      margin-bottom: 10px;
     }
   }
 
